# nldi-py

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  Taskfile.yml  _setup.py  docker-compose.yml  header-comparison.md  iana_types.py  nldi.log.2024-08-22  nldi.yml  pyproject.toml  requirements-docker.txt  requirements.txt  start_nldi_server.sh  startserver.sh
.github/workflows/: build.yml  build_alpha.yml  build_release.yml  test.yml
docker/: default.source.yml  entrypoint.sh  pygeoapi.config.yml  start_nldi_server.sh  x.sh
docs/: API.rst  About.rst  Glossary.rst  Overview.rst  Plugins.rst  architecture-overview.md  conf.py  decision-log.md  dependencies.md  endpoint-outline.md  framework-decision.md  implementation-notes.md  index.rst  java-openapi.json  load-testing.md  onboarding-guide.md  principles.md  refactor-strategy.md  roadmap.md  tdd.md  testing-strategy.md  tooling.md  workflow.md
docs/specs/: catchmentsp-schema-switch-plan.md  catchmentsp-schema-switch.md  disconnect-guard.md  head-options-refactor.md  parity-tests.md  pr-2.1-db-models-repos.md  pr-2.2-list-sources.md  pr-2.3-list-features.md  pr-2.3-single-feature.md  pr-2.4-list-features.md  pr-3.1-navigation-dm.md  pr-4.2-hydrolocation.md  pr-4.3-basin.md  pr-4.4-split-catchment.md  pr-5.1-jsonld.md  remove-advanced-alchemy.md  streaming-nav-responses.md
nldi/: __init__.py  api.py  env.py  flask_app.py  log.py  navigate.py  openapi.py  plugin.py  util.py
nldi/functions/: __init__.py  basin.py  lookup.py  navigate.py
nldi/lookup/: __init__.py  base.py  catchment.py  feature.py  flowline.py  mainstem.py  pygeoapi.py  source.py
nldi/openapi/: __init__.py
nldi/schemas/: __init__.py  characteristic_data.py  nhdplus.py  nldi_data.py
nldi/schemas/openapi/: parameters.yaml  schemas.yaml
nldi/templates/: FeatureCollection.j2  FeatureGraph.j2
nldi/templates/openapi/: parameters.json  parameters.yaml  responses.json  schemas.json
notebooks/: characteristics.ipynb  nldi.yml  scratch.ipynb  testcontainer.ipynb
public/: .buildinfo  About.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
public/.doctrees/: About.doctree  environment.pickle  index.doctree
public/_sources/: About.rst.txt  index.rst.txt
scripts/: capture_parity.py
src/nldi/: __init__.py  _flask_app.py  api.py  app.py  asgi.py  cmdline.py  config.py  dto.py  errors.py  flask_app.py  flask_wsgi.py  geojson.py  health.py  helpers.py  jsonld.py  litestar_asgi.py  log.py  media.py  middleware.py  negotiate.py  orig_api.py  orig_plugin.py  plugin.py  pygeoapi.py  server.py  util.py  wsgi.py
src/nldi/api/: BasePlugin.py  CatchmentPlugin.py  CrawlerSourcePlugin.py  FeaturePlugin.py  FlowlinePlugin.py  HydroLocationPlugin.py  MainstemPlugin.py  PyGeoAPIPlugin.py  PyGeoPlugin.py  SplitCatchmentPlugin.py  __PyGeoPlugin.py  __init__.py  err.py  main.py  parameters.yaml  plugin.py  responses.yaml
src/nldi/config/: __init__.py  _yaml.py  base.py  default.py  status.py
src/nldi/controllers/: __init__.py  linked_data.py  root.py
src/nldi/db/: __init__.py  models.py  navigation.py  repos.py
src/nldi/functions/: __init__.py  basin.py  lookup.py  navigate.py
src/nldi/gt_handlers/: catchment.py  crawlersource.py
src/nldi/handlers/: __init__.py  _feature.py  base.py  catchment.py  crawlersource.py  errors.py  feature.py  flowline.py  mainstem.py
src/nldi/lookup/: __init__.py  base.py  catchment.py  feature.py  flowline.py  mainstem.py  pygeoapi.py  source.py
src/nldi/openapi/: __init__.py  parameters.yaml
src/nldi/orig_functions/: basin.py  lookup.py  navigate.py
src/nldi/orig_lookup/: flowline.py  pygeoapi.py  source.py
src/nldi/querybuilder/: __init__.py  basin_query.py  err.py  lookup.py  lookup_query.py  navigate_query.py
src/nldi/schemas/: characteristic_data.py  nhdplus.py  nldi_data.py
src/nldi/server/: __init__.py  flask_routers.py  litestar_routers.py  openapi.py
src/nldi/templates/: FeatureCollection.j2  FeatureCollectionGraph.j2  swagger.html
tests/: 00_smoke_test.py  00_utility_test.py  10_config_test.py  10_utilityfuncs_test.py  20_config_test.py  20_infrastructure_test.py  30_sys_routes_test.py  40_crawler_sources_test.py  40_plugins_test.py  50_API_test.py  50_flowline_test.py  60_API_client_test.py  60_APP_client_test.py  60_features_test.py  70_OAS_test.py  70_navigation_test.py  80_misc_routes_test.py  80_parity_test.py  __init__.py  api_client_test.py  cli_routing_test.py  config_test.py  conftest.py  handlers_test.py  smoke_test.py  test_plugins.py  utilityfuncs_test.py
tests/_legacy/: 00_smoke_test.py  00_utility_test.py  10_config_test.py  30_sys_routes_test.py  40_crawler_sources_test.py  50_flowline_test.py  60_features_test.py  70_navigation_test.py  80_misc_routes_test.py  README.md  __init__.py  conftest.py
tests/_legacy/data/: nldi_server_config.yml
tests/_legacy/load/: coloradoriver.sh  outfile_1223248.txt  outfile_1224932.txt  outfile_1227485.txt  outfile_1229134.txt  outfile_1239452.txt  outfile_1251499.txt  outfile_1261466.txt  outfile_1319177.txt  (+11 more)
tests/data/: local.openapi.yml  nldi_server_config.yml  sources_config.yml  test.env
tests/integration/: conftest.py  test_endpoints.py  test_list_sources.py  test_navigation.py  test_repos.py  test_single_feature.py
tests/load/: coloradoriver.sh  locustfile.py  worklist.txt
tests/parity/: capture.py  conftest.py  test_parity.py
tests/system/: conftest.py  test_smoke.py
tests/unit/: __init__.py  conftest.py  test_app.py  test_basin.py  test_basin_split.py  test_comid_position.py  test_config.py  test_db_config.py  test_dto.py  test_errors.py  test_feature_nav.py  test_flowline_nav.py  test_geojson.py  test_hydrolocation.py  test_jsonld.py  test_jsonld_endpoints.py  test_list_features.py  test_list_sources.py  test_middleware.py  test_models.py  test_navigation.py  test_navigation_query.py  test_negotiate.py  test_pygeoapi_client.py  test_repos.py  test_routes.py  test_single_feature.py  test_smoke.py  test_split_catchment.py  test_util.py
(+799 files in other folders)
