[project]
name = "nldi-py"
version = "3.0.0-dev"
description = "The Hydro Network Linked Data Index (NLDI) puts a restful application programming interface (API) in front of the National Hydrolography dataset (NHD)."
authors = [{ name = "Internet of Water" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "CC0-1.0"
maintainers = [
  { name = "Benjamin Webb", email = "bwebb@lincolninst.edu" },
  { name = "Gene Trantham", email = "gtrantham@usgs.gov" },
]
keywords = ["usgs", "nldi", "nhgf", "nhd"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "litestar[standard]>=2.21.0,<3",
  "uvicorn>=0.34.0,<0.35",
  "sqlalchemy[asyncio]>=2.0,<3",
  "psycopg[binary]>=3.1,<4",
  "geoalchemy2>=0.16.0,<0.17",
  "msgspec>=0.19.0,<0.20",
]

[project.urls]
Homepage = "https://github.com/internetofwater/nldi-py"
Repository = "https://github.com/internetofwater/nldi-py"

[dependency-groups]
dev = [
  "ruff>=0.5.5,<0.6",
  "ty>=0.0.23",
  "pytest>=8.1.1,<9",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=5.0.0,<6",
  "testcontainers>=4.7.2,<5",
  "locust>=2.29,<3",
]

[build-system]
requires = ["uv_build>=0.5.0,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nldi"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["N", "I", "E", "W", "S", "D"]
ignore = [
  "S311",
  "E501",
  "D211",
  "D213",
]
pydocstyle = { convention = "pep257" }

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",
  "D",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--tb=short -p no:warnings"
asyncio_mode = "auto"
markers = [
  "unit: unit tests",
  "integration: requires containerized database",
  "parity: contract tests against golden files",
  "system: requires live RDS",
]
